VEGAS Pro 19.0用の ScriptPortal.Vegas.dll に置き換えた

--- a/AddTextEventFromFilename/AddTextEventFromFilename.csproj
+++ b/AddTextEventFromFilename/AddTextEventFromFilename.csproj
@@ -50,5 +50,8 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ScriptPortal.Vegas.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
