--- a/AddTextEventFromFilename/AddTextEventFromFilename.csproj
+++ b/AddTextEventFromFilename/AddTextEventFromFilename.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="AddTextEventFromFilename.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
